--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "devise-axios": "^1.0.24",
     "install": "^0.13.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-router-bootstrap": "^0.26.1",
