--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-user-profile": "^1.0.3",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.4.1",
