--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "devise-axios": "^1.0.24",
     "install": "^0.13.0",
+    "luxon": "^3.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.4.0",
